--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
 Badreddine Bentiah <badrechahide@gmail.com>
-Nour Mellal <>
+Nour Mellal <mellal.nour9@gmail.com>
